# chip8-emulation

./: .gitignore  CMakeLists.txt  readme.md
include/CHIP8/: CPU.h
lib/: CPU.cpp
src/: main.cpp
